# review-fix-loop

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  README.zh-CN.md  SECURITY.md  SUPPORT.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  question.yml
.github/workflows/: ci.yml  release.yml  security.yml
adapters/generic/: gates.json
adapters/project-template/: README.md  SKILL.md  gates.json
adapters/project-template/agents/: openai.yaml
adapters/project-template/references/: adapter-authoring.md
docs/: adapters.md  architecture.md  comparisons.md  contracts.md  deep-research-execution-plan.md  faq.md  quickstart.md  release-checklist.md  remaining-work-implementation-plan.md  review-fix-loop-maintenance-status.md  review-loop-runbook.md  template-repository.md
docs/assets/: demo-script.md  workflow.mmd
docs/zh-CN/: adapters.md  architecture.md  comparisons.md  contracts.md  deep-research-execution-plan.md  faq.md  quickstart.md  release-checklist.md  remaining-work-implementation-plan.md  review-fix-loop-maintenance-status.md  review-loop-runbook.md  template-repository.md
examples/adapters/frontend-basic/: README.md  gates.json
examples/adapters/monorepo-basic/: README.md  gates.json
examples/adapters/python-basic/: README.md  gates.json
examples/contracts/: case-01-normal-loop-stale-diff.md  case-02-large-merge-residual-risk.md  case-03-subagent-slice-review.md  case-04-project-adapter-gates.md  case-05-auto-fix-boundary.md
skills/review-fix-loop-core/: SKILL.md
skills/review-fix-loop-core/agents/: openai.yaml
skills/review-fix-loop-core/references/: diagnostic.schema.json  gate-config.schema.json  run-record.schema.json  snapshot.schema.json  subagent-protocol.md
skills/review-fix-loop-core/scripts/: gate.py  snapshot.py
src/review_fix_loop/: __init__.py  assets.py  cli.py  config.py  diagnostics.py  errors.py  gates.py  git_snapshot.py  i18n.py  repo_map.py  run_record.py  schema_validation.py  slices.py  utils.py
src/review_fix_loop/domain/: __init__.py  types.py
src/review_fix_loop/schemas/: diagnostic.schema.json  gate-config.schema.json  run-record.schema.json  snapshot.schema.json
src/review_fix_loop/services/: __init__.py  gate_service.py  schema_service.py  snapshot_service.py
src/review_fix_loop/templates/: generic.gates.json
tests/: test_cli_features.py  test_gate_config.py  test_regressions.py  test_review_loop_contract.py  test_run_record.py  test_snapshot.py
