[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "review-fix-loop"
version = "0.1.0"
description = "Local-first review/fix/re-review loop toolkit for AI agents."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [
  { name = "review-fix-loop contributors" }
]
keywords = ["code-review", "ai-agent", "git", "reviewdog", "pre-commit"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Software Development :: Quality Assurance"
]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-cov>=5",
  "pytest-xdist>=3",
  "jsonschema>=4",
  "build>=1",
  "twine>=5",
  "ruff>=0.8",
  "mypy>=1.13",
  "bandit[toml]>=1.8",
  "pip-audit>=2.7",
  "PyYAML>=6"
]

[project.scripts]
review-fix-loop = "review_fix_loop.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
review_fix_loop = ["templates/*.json", "schemas/*.json"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["review_fix_loop"]

[tool.coverage.report]
show_missing = true

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.mypy]
python_version = "3.10"
files = ["src/review_fix_loop"]
